# pwiki

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  deploy.md  docker-compose.yml  install-requirements.txt  install.py  install.sh  pyproject.toml
deploy/: pwiki-vault-sync.sh
deploy/systemd/: pwiki-vault-sync.service.example  pwiki-vault-sync.timer.example  user-pwiki-vault-sync.service.example  user-pwiki-vault-sync.timer.example
pwiki/: .dockerignore  Dockerfile  access.py  app.py  cli.py  config.py  db.py  dotenv_loader.py  factory.py  gitsync.py  internal_api.py  oauth.py  permissions.py  rendering.py  requirements.lock.txt  requirements.txt  sections.py  storage.py  vault.py  webutil.py
pwiki/routes/: admin.py  oauth.py  pages.py
pwiki/static/: app.js  style.css
pwiki/templates/: addpage.html  admin_user_detail.html  admin_users.html  base.html  browse.html  conflict.html  delete.html  edit.html  error.html  error_403.html  search.html
pwiki/tests/: conftest.py  test_admin_ui.py  test_cli.py  test_config.py  test_dockerfile.py  test_enforcement.py  test_git_rebase_push.py  test_install.py  test_internal_api.py  test_markdown.py  test_markdown_storage.py  test_oauth.py  test_permissions.py  test_security.py  test_ui_hide.py  test_upload.py  test_users_cli.py  test_vault.py
